package SoftwareDesignPatterns.Creational.Factory;

public interface AircraftFactory {
    public Aircraft buildAircraft();
}
